--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
     <style>
         body{
             margin: 0;
+            padding: 0;
         }
         #change-amount{
             position: absolute;
             top: 0;
             left: 0;
             height: 40px;
-            width: clamp(70px, 40vw, 60vw);
+            width: clamp(30px, 40vw, 100vw);
             width: 40vw;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
+            flex-wrap: wrap;
         }
     </style>
 </head>
